# RevitDevTool.PyTest

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/revitdevtool_pytest/: __init__.py  bridge.py  connection.py  constants.py  dialog_resolver.py  discovery.py  models.py  plugin.py  reporting.py  serializer.py  suite_leasing.py  suite_lock.py
tests/: _session_probe.py  conftest.py  test_active_state.py  test_dependencies.py  test_discovery_selection.py  test_image_export.py  test_revit_basic.py  test_revit_document.py  test_revit_transactions.py  test_schedule_custom_copy_revit.py  test_schedule_field_mapping_revit.py  test_schedule_header_capture_revit.py  test_schedule_header_copy_revit.py  test_scheduleformatting_revit.py  test_session_cleanliness.py  test_smoke.py  test_streaming.py  test_suite_leasing.py
tests/schedule/: __init__.py  constants.py  contracts.py  copy_workflow.py  custom_workflow.py  field_mapping.py  header_workflow.py  model.py  serializer.py  table_cell.py  template_workflow.py  test.json
